--- a/app/src/main/res/layout/item_phone_in_cart.xml
+++ b/app/src/main/res/layout/item_phone_in_cart.xml
@@ -1,95 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingTop="12dp"
-    android:paddingBottom="12dp"
-    >
-<com.google.android.material.imageview.ShapeableImageView
-    android:id="@+id/imageViewImage"
-    android:layout_width="88dp"
-    android:layout_height="88dp"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    android:src="@drawable/img_samsung_note"
-    app:shapeAppearanceOverlay="@style/RoundedImageInCart"
-    android:scaleType="centerCrop"
-    android:layout_marginStart="20dp"
-    />
+    android:paddingBottom="12dp">
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/imageViewImage"
+        android:layout_width="88dp"
+        android:layout_height="88dp"
+        android:layout_marginStart="20dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/img_samsung_note"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:shapeAppearanceOverlay="@style/RoundedImageInCart" />
 
     <TextView
         android:id="@+id/textViewName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/imageViewImage"
-        android:text="Galaxy Note 20 Ultra"
-        android:textColor="@color/white"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:maxWidth="156dp"
         android:layout_marginStart="20dp"
-        />
+        android:maxWidth="156dp"
+        android:text="@string/galaxy_note_20_ultra"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@id/imageViewImage"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$3000.00"
-        android:textColor="@color/orange"
-        android:textStyle="bold"
-        android:textSize="20sp"
         android:layout_marginTop="8dp"
+        android:text="@string/_3000_00"
+        android:textColor="@color/orange"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@id/textViewName"
-        app:layout_constraintTop_toBottomOf="@id/textViewName"
-        />
+        app:layout_constraintTop_toBottomOf="@id/textViewName" />
 
     <LinearLayout
         android:id="@+id/ll_counter"
         android:layout_width="28dp"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/textViewName"
-        app:layout_constraintTop_toTopOf="@id/textViewName"
-        android:orientation="vertical"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="4dp"
         android:background="@drawable/counter_bg"
         android:gravity="center_horizontal"
-        android:layout_marginTop="4dp"
-        android:layout_marginStart="32dp"
-        >
+        android:orientation="vertical"
+        app:layout_constraintStart_toEndOf="@id/textViewName"
+        app:layout_constraintTop_toTopOf="@id/textViewName">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="+"
             android:textColor="@color/white"
-            android:textSize="20sp"
-            />
+            android:textSize="20sp" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2"
             android:textColor="@color/white"
-            android:textSize="20sp"
-            />
+            android:textSize="20sp" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="-"
             android:textColor="@color/white"
-            android:textSize="20sp"
-            />
+            android:textSize="20sp" />
     </LinearLayout>
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/ll_counter"
+        android:layout_marginStart="20dp"
+        android:src="@drawable/ic_delete"
         app:layout_constraintBottom_toBottomOf="@id/ll_counter"
         app:layout_constraintStart_toEndOf="@id/ll_counter"
-        android:src="@drawable/ic_delete"
-        android:layout_marginStart="20dp"
-        />
-
+        app:layout_constraintTop_toTopOf="@id/ll_counter" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
